--- a/.github/workflows/postgresql_testrepo_testdb.yml
+++ b/.github/workflows/postgresql_testrepo_testdb.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         server-name: rmendizabal-pgflex.postgres.database.azure.com
         connection-string: ${{ secrets.AZURE_POSTGRESQLFLEXIBLE_CONNECTION_STRING }}
-        plsql-file: "products.sql"
+        plsql-file: "employeedb.sql"
 
     - name: logout
       run: |
